# embedded_nn

./: Cargo.toml  Embed.toml
.cargo/: config.toml
src/: main.rs
